--- a/.gitmodules
+++ b/.gitmodules
@@ -6,4 +6,4 @@
 	url = https://github.com/madler/zlib.git
 [submodule "bzip2"]
 	path = bzip2
-	url = git://sourceware.org/git/bzip2.git
+	url = https://github.com/asac/bzip2-mirror.git
