--- a/uuu/CMakeLists.txt
+++ b/uuu/CMakeLists.txt
@@ -19,7 +19,9 @@ find_package(OpenSSL)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pthread -O2")
 
 if (STATIC)
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -static-libstdc++ -static-libgcc")
+set(BUILD_SHARED_LIBS OFF)
+set(CMAKE_FIND_LIBRARY_SUFFIXES ".a")
+set(CMAKE_EXE_LINKER_FLAGS "-no-pie -static")
 endif()
 
 set(LSTS
